Adição do menu e mudanças na lógica de Login

--- a/app/views/login_view.html
+++ b/app/views/login_view.html
@@ -15,7 +15,7 @@
         % end
         
 
-        <form method="post">
+        <form method="post" action="/{{ permission }}/Login">
             <label for="username">Usuário:</label>
             <input type="text" id="username" name="username" required> 
 
