Mais alterações acerca da opção 'matricula'

--- a/app/views/matricular_view.html
+++ b/app/views/matricular_view.html
@@ -69,6 +69,12 @@
             <label for="matricula">Matrícula:</label>
             <input type="text" id="matricula" name="matricula" required>
 
+            <label for="escolha">Tipo:</label>
+            <select name="escolha" id="escolha">
+                <option value="aluno">Aluno</option>
+                <option value="professor">Professor</option>
+            </select>
+
             <input type="submit" value="Registrar">
         </form>
     </div>
