--- a/app/views/matricular_view.html
+++ b/app/views/matricular_view.html
@@ -84,6 +84,12 @@
             <label for="matricula">Matrícula:</label>
             <input type="text" id="matricula" name="matricula" required>
 
+            <label for="escolha">Tipo:</label>
+            <select name="escolha" id="escolha">
+                <option value="aluno">Aluno</option>
+                <option value="professor">Professor</option>
+            </select>
+
             <button type="submit">Registrar</button>
         </form>
     </div>
