Finalização do banco e dados para matricula

--- a/app/views/matricula_aluno_view.html
+++ b/app/views/matricula_aluno_view.html
@@ -72,7 +72,7 @@
 <body>
     <div class="container">
         <h1>Matricular Aluno</h1>
-        <form id="registrationForm">
+        <form id="registrationForm", method="POST">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
             <p class="error-message" id="nomeError">Nome deve ter pelo menos 3 caracteres.</p>
