--- a/app/views/register_view.html
+++ b/app/views/register_view.html
@@ -89,6 +89,9 @@
     </div>
     
     <script>
+        if ("{{error}}") {
+            alert("Erro: {{error}}");
+        }
         document.getElementById("registerForm").addEventListener("submit", function(event) {
             let username = document.getElementById("username").value.trim();
             let password = document.getElementById("password").value.trim();
